; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_kpc.c_kpc_set_rawpmu_config.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_kpc.c_kpc_set_rawpmu_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SREG_PMCR2 = common dso_local global i32 0, align 4
@SREG_PMCR3 = common dso_local global i32 0, align 4
@SREG_PMCR4 = common dso_local global i32 0, align 4
@SREG_OPMAT0 = common dso_local global i32 0, align 4
@SREG_OPMAT1 = common dso_local global i32 0, align 4
@SREG_OPMSK0 = common dso_local global i32 0, align 4
@SREG_OPMSK1 = common dso_local global i32 0, align 4
@SREG_PMMMAP = common dso_local global i32 0, align 4
@SREG_PMTRHLD2 = common dso_local global i32 0, align 4
@SREG_PMTRHLD4 = common dso_local global i32 0, align 4
@SREG_PMTRHLD6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @kpc_set_rawpmu_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kpc_set_rawpmu_config(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @SREG_PMCR2, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @SREG_WRITE(i32 %3, i32 %6)
  %8 = load i32, i32* @SREG_PMCR3, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @SREG_WRITE(i32 %8, i32 %11)
  %13 = load i32, i32* @SREG_PMCR4, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @SREG_WRITE(i32 %13, i32 %16)
  %18 = load i32, i32* @SREG_OPMAT0, align 4
  %19 = load i32*, i32** %2, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 3
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @SREG_WRITE(i32 %18, i32 %21)
  %23 = load i32, i32* @SREG_OPMAT1, align 4
  %24 = load i32*, i32** %2, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 4
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @SREG_WRITE(i32 %23, i32 %26)
  %28 = load i32, i32* @SREG_OPMSK0, align 4
  %29 = load i32*, i32** %2, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 5
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @SREG_WRITE(i32 %28, i32 %31)
  %33 = load i32, i32* @SREG_OPMSK1, align 4
  %34 = load i32*, i32** %2, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 6
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @SREG_WRITE(i32 %33, i32 %36)
  ret i32 0
}

declare dso_local i32 @SREG_WRITE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
